[package]
name = "agentkernel-capabilities"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
glob = "0.3"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
